--- a/frontend/src/pages/styles/ResultadoPesquisa.module.css
+++ b/frontend/src/pages/styles/ResultadoPesquisa.module.css
@@ -7,10 +7,11 @@
     margin: 0 18% 0 18%;
 }
 
-.containerResultadoPesquisa{
-    margin: 5vh 0 5vh 0;
-}
-
+.containerResultadoPesquisa {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2%;
+  }
 .resultadoContainer{
     width: 100%;
     text-decoration: none;
@@ -48,6 +49,35 @@
     font-size: 1em;
     margin-left: 0.1em;
 }
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+    .container{
+        margin: 0 5% 0 5%;
+    }
+
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+    .container{
+        margin: 0 5% 0 5%;
+    }
+
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+
+    .container{
+        margin: 0 2% 0 2%;
+    }
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1440px) {
+
+    .container{
+        margin: 0 15% 0 15%;
+    }
+}
+
 
 
 
