--- a/frontend/src/pages/styles/Login.module.css
+++ b/frontend/src/pages/styles/Login.module.css
@@ -187,6 +187,45 @@
     margin-right: 10px;
   }
 
+  .buttonCompra{
+    width: 100%;
+    height: 2.3em;
+    border-radius: 10px;
+    background: scroll;
+    border: none;
+    margin-top: 15px;   
+    cursor: pointer;
+  }
+  
+  .h1AdicionarSacola{
+    font-size: 12px;
+    text-align: center;  
+    font-weight: bold;
+    margin: 0;
+    color: #ffff;
+  }
+  
+  
+  .h2AdicionarSacola{
+    color: #015a80; 
+   text-align: center;  
+    font-weight: bold;
+  }
+  
+  .buttonFecharModal{
+    background:#015a80;
+    border-radius: 50%;
+    width: 2em;
+    height: 1.7em;
+    border: none;
+  }
+  
+ 
+  .imgFechar{
+    color: aliceblue;
+    margin-top: 4px;
+  }
+  
   
 @media only screen and (min-width: 577px) and (max-width: 768px) {
 
