--- a/frontend/src/pages/styles/PerfilUsuario.module.css
+++ b/frontend/src/pages/styles/PerfilUsuario.module.css
@@ -117,3 +117,11 @@
   .buttonExpandirSenha{
     margin-bottom: 5%;
   }
+
+  .active {
+    background-color: #f0f0f0;
+    /* Adicione outros estilos de destaque aqui */
+  }
+
+  
+  
