--- a/frontend/src/components/layout/Search.module.css
+++ b/frontend/src/components/layout/Search.module.css
@@ -1,56 +1,183 @@
 .searchFormContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 45vh;
-    margin-top: 0.5vh;
-  }
-  
-  .searchForm{
-    height: 3.2vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45vh;
+  margin-top: 0.5vh;
+}
+
+.searchForm {
+  height: 3.2vh;
+  width: 100%;
+  max-width: 45vh;
+  background: white;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+}
+
+.searchFormInput {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 0 5px;
+  color: #015a80;
+  font-size: 16px;
+  border-radius: 0 0 0 5px;
+}
+
+.searchFormButton {
+  border: none;
+  outline: none;
+  background-color: white;
+  border-radius: 0 5px 5px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.searchFormButton svg {
+  font-size: 2vh;
+  color: grey;
+  margin-right: 5px;
+}
+
+/* Estilos responsivos para o formulário de pesquisa */
+
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+  .searchFormContainer {
     width: 100%;
-    max-width: 45vh;
-    background:white;
-    border-radius: 7px;
-    display: flex;
-    align-items: center;
+    margin-top: 1vh;
   }
-  
-  .searchFormInput{
-    flex: 1;
-    border: none;
-    outline: none;
-    padding: 0 5px;
-    color: #015a80;
+
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
+    width: 30vh
+  }
+
+  .searchFormInput {
+    font-size: 14px;
+    border-radius: 5px;
+    width: 30vh
+  }
+
+  .searchFormButton svg {
+    font-size: 2.5vh;
+  }
+}
+
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  .searchFormContainer {
+    width: 100%;
+    margin-top: 1vh;
+  }
+
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
+    width: 40vh;
+  }
+
+  .searchFormInput {
+    font-size: 14px;
+    border-radius: 5px;
+    width: 40vh;
+  }
+
+  .searchFormButton svg {
+    font-size: 2.5vh;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .searchFormContainer {
+    width: 60%;
+    margin-top: 1vh;
+  }
+
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+
+  .searchFormInput {
     font-size: 16px;
-    border-radius: 0 0 0 5px;
-  }
-  
-  .searchFormButton{
-    border: none;
-    outline: none;
-    background-color: white;
-    border-radius: 0 5px 5px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+    border-radius: 5px;
   }
 
-  .searchFormButton svg{
+  .searchFormButton svg {
     font-size: 2vh;
-    color: grey;
-    margin-right: 5px;
+  }
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+  .searchFormContainer {
+    width: 40%;
+    margin-top: 1vh;
   }
 
-
-  @media only screen and (min-width: 320px) and (max-width: 768px) {
-    .searchFormContainer {
-      width: 60%;
-      margin-top: 10px;
-    }
-  
-    .searchForm {
-      max-width: 100%;
-    }
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
   }
+
+  .searchFormInput {
+    font-size: 18px;
+    border-radius: 5px;
+  }
+
+  .searchFormButton svg {
+    font-size: 2.5vh;
+  }
+}
+
+@media only screen and (min-width: 1201px) and (max-width: 1440px) {
+  .searchFormContainer {
+    width: 30%;
+    margin-top: 1vh;
+  }
+
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+
+  .searchFormInput {
+    font-size: 20px;
+    border-radius: 5px;
+  }
+
+  .searchFormButton svg {
+    font-size: 3vh;
+  }
+}
+
+@media only screen and (min-width: 1441px) {
+  .searchFormContainer {
+    width: 25%;
+    margin-top: 1vh;
+  }
+
+  .searchForm {
+    height: 4vh;
+    max-width: 100%;
+    border-radius: 5px;
+  }
+
+  .searchFormInput {
+    font-size: 22px;
+    border-radius: 5px;
+  }
+
+  .searchFormButton svg {
+    font-size: 3.5vh;
+  }
+}
+
