--- a/frontend/src/components/buttons/Button.module.css
+++ b/frontend/src/components/buttons/Button.module.css
@@ -18,6 +18,8 @@
     font-size: 1.3em;
   }
 
+
+
 /* Ajustes para telas entre 320px e 576px */
 @media only screen and (min-width: 320px) and (max-width: 576px) {
   .navbarButton,
@@ -81,11 +83,19 @@
     width: 50px;
     height: 50px;
     font-size: 1.8rem;
+    padding: 0;
+    text-align: center;
   }
 
   .navbarCesta {
     font-size: 1.8rem;
   }
+
+  .navbarContainerCompra{
+    margin: 0;
+    padding: 0;
+  }
+
 }
 
 /* Ajustes para telas maiores que 1440px */
