--- a/frontend/src/components/layout/Footer.module.css
+++ b/frontend/src/components/layout/Footer.module.css
@@ -1,231 +1,235 @@
 .footer {
   display: grid;
   grid-template-rows: repeat(3, auto);
+  border: none;
   /* Adicione qualquer estilo adicional para o footer aqui */
 }
 
 .row {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  border: none;
 }
 
-.column {
+.rowCopy{
+  display: grid;
+  grid-template-columns: 1fr;
+
+}
+
+.column,  .columnCopy{
   justify-content: center;
   text-align: center;
+  background-color: #033579;
+  border: none;
 }
 
-.socialListLi svg{
-  font-size: 1em;
+.columnCopy{
+  background: #44638f;
+}
 
+
+.footerLogoImg{
+  width: 24%;
+  margin: 2%; 
 }
 
 .containerSocialList{
-  margin: 5%;
+  margin: 3%;
   display: flex;
   justify-content: space-around;
 
 }
 
-.fullWidth {
-  grid-column: 1 / span 2;
-  background-color: #ffffff;
-}
-
-
-@media only screen and (min-width: 320px){
-  .containerFooter{
-    width: 105%;
-  }
-}
-
-/* Ajustes para telas menores que 576px */
-@media only screen and (min-width: 320px) and (max-width: 576px) {
-  .containerFooter {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    
-  }
-
-  .socialListLi {
-    margin: 2% 7%;
-  }
-
-  .pagamentoListDiv {
-    margin: 0 20%;
-  }
-
-  .footerPagamentoH1, .footerFaleConosco{
-    font-size: 0.5em;
-    width: 100%;
-}
-}
-
-/* Ajustes para telas entre 577px e 768px */
-@media only screen and (min-width: 577px) and (max-width: 768px) {
-  .containerFooter {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-  }
-
-  .socialListLi {
-    margin: 2% 10%;
-  }
-
-  .pagamentoListDiv {
-    margin: 0 20%;
-  }
-}
-
-/* Ajustes para telas entre 769px e 992px */
-@media only screen and (min-width: 769px) and (max-width: 992px) {
-  .containerFooter {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-  }
-
-  .socialListLi {
-    margin: 2% 10%;
-  }
-
-  .pagamentoListDiv {
-    margin: 0 20%;
-  }
-}
-
-  
-@media only screen and (min-width: 993px) and (max-width: 1200px) {
-  .containerFooter {
-    grid-template-columns: 1fr;
-    grid-template-rows: 10vh auto 15vh;
-    grid-row-gap: 20px;
-  }
-
-  .footerFaleConoscoDiv {
-    grid-column: 1;
-    justify-self: center;
-    align-self: center;
-  }
-
-  .pagamentoListDiv {
-    grid-column: 1;
-    justify-self: center;
-    align-self: center;
-    margin: 0;
-  }
-}
-
-
-@media only screen and (min-width: 1201px) and (max-width: 1440px) {
-  .containerFooter {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 10vh;
-  }
-}
-
-footer {
-  width: 100%;
-  background: #033579;
-}
-
-.containerFooter {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 10vh 15vh;
-  background: #033579;
-  justify-content: space-around;
-  margin-top: 100px;
-}
-
-.containerFooter > div {
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
-}
-
-.socialListFooter {
-  display: flex;
-  list-style-type: none;
-  text-decoration: none;
-  justify-content: space-around;
-  color: #ffffff;
-}
-
-.socialList {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  text-decoration: none;
-  text-align: center;
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
-}
-
-.socialListLi:hover {
-  color: rgb(144, 202, 252);
-}
-
-.socialListLi {
-  margin: 2% 15% 2% 15%;
+.footer .footerFaleConosco{
   font-size: 1em;
-  background: #03347997;
-}
-
-.footerFaleConosco {
-  font-size: 18px;
-  font-weight: bold;
-  color: #ffffff;
   text-align: center;
-}
-
-.footerFaleConosco:hover {
-  color: rgb(144, 202, 252);
+  padding: 20px;
 }
 
 a:link {
   text-decoration: none;
 }
 
+.containerFooter {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 10vh;
+}
+
+
+.socialListFooter {
+display: flex;
+list-style-type: none;
+text-decoration: none;
+justify-content: space-around;
+color: #ffffff;
+}
+
+.socialListLi svg{
+  font-size: 1.7em;
+  color: #ffffff;
+
+}
+
+.socialList {
+display: flex;
+justify-content: center;
+list-style-type: none;
+text-decoration: none;
+text-align: center;
+cursor: pointer;
+padding: 0;
+margin: 0;
+}
+
+.socialListLi:hover {
+color: rgb(144, 202, 252);
+}
+
+.socialListLi {
+margin: 2% 15% 2% 15%;
+font-size: 1em;
+background: #03347997;
+}
+
+.footerFaleConosco:hover {
+color: rgb(144, 202, 252);
+}
+
+a:link {
+text-decoration: none;
+}
+
 .footerPagamento {
-  margin: 0;
-  background: #03347997;
+margin: 0;
+background: #03347997;
 }
 
 .footerFaleConoscoDiv {
-  margin-top: 0.5em;
+margin-top: 0.5em;
 }
 
 .footerPagamentoH1,
 .footerFaleConosco {
-  font-size: 0.7em;
-  font-weight: bold;
-  color: #ffffff;
+font-size: 0.7em;
+font-weight: bold;
+color: #ffffff;
 }
 
 .pagamentoListDiv {
-  margin: 0 35% 0 35%;
-  padding: 1em;
+margin: 0 35% 0 35%;
+padding: 1em;
 }
 
 .pagamentoList {
-  display: flex;
-  list-style-type: none;
-  text-decoration: none;
-  text-align: center;
-  justify-content: space-around;
-  margin: 0;
+display: flex;
+list-style-type: none;
+text-decoration: none;
+text-align: center;
+justify-content: space-around;
+margin: 0;
+
 }
 
-.footerCopyRight {
-  padding: 1em;
-  background: #03347997;
+.pagamentoList img{
+  margin: 0 5px;
+  width: 30px;
+  }
+
+
+/* Ajustes para telas menores que 576px */
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+   
+  .footerLogoImg{
+    width: 50%;
+    margin: 2%; 
+  }
+  
+  .socialListLi svg{
+    font-size: 1.2em;
+    color: #ffffff;
+    margin-top: 5px;
+  
+  }
+  .pagamentoList img{
+  margin: 0 4px;
+  width: 15px;
+  margin-top: 5px;
+  }
+  
+  .footerCopyP{
+    padding: 10px;
+  
+  }
+
+.column .footerFaleConosco{
+  font-size: 10px;
+  border: none;
+}
 }
 
-.footerCopyP {
-  color: #033579;
-  font-size: large;
-  color: #ffffffc4;
-  margin: 0;
-  padding: 20px;
-  text-align: center;
+/* Ajustes para telas entre 577px e 768px */
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+ 
+  .footerLogoImg{
+    width: 30%;
+    margin: 2%; 
+  }
+  
+  .socialListLi svg{
+    font-size: 1.3em;
+    color: #ffffff;
+  
+  }
+  .pagamentoList img{
+  margin: 0 5px;
+  width: 20px;
+  }
+  
+  .footerCopyP{
+    padding: 20px;
+  
+  }
+
+  .column{
+    border: none;
+  }
+
+}
+
+/* Ajustes para telas entre 769px e 992px */
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .column{
+    border: none;
+  }
+}
+
+  
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+  .row{
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+
+  .column{
+    border: none;
+  }
+
+    
+  .footerCopyP{
+    padding: 20px;
+  
+  }
+
+}
+
+
+@media only screen and (min-width: 1201px) and (max-width: 1440px) {
+   
+  .footerCopyP{
+    padding: 20px;
+  
+  }
+
 }
