--- a/frontend/src/components/buttons/Button.module.css
+++ b/frontend/src/components/buttons/Button.module.css
@@ -1,6 +1,6 @@
 
   .navbarButton, .navbarButtonFav {
-      background: #033579;
+    background-color: #015a80;
       border: none;
       cursor: pointer;
       font-size: 1.5rem;
