--- a/frontend/src/components/layout/UsuarioLogin.module.css
+++ b/frontend/src/components/layout/UsuarioLogin.module.css
@@ -1,15 +1,19 @@
 * {
   margin: 0;
   padding: 0;
+
 }
 
 .loginUser {
   display: flex;
+  background-color: #015a80;
+
 }
 
 .login {
   padding: 0 20px;
   text-align: left;
+  background-color: #015a80;
 
 }
 
@@ -25,6 +29,10 @@
   margin: 0;
   margin-top: 0.5vh;
   font-size: 0.8em;
+}
+.divImgUser{
+  font-size: 250%;
+  color: #ffffff;
 }
 
 .entre,
