--- a/frontend/src/pages/styles/Home.module.css
+++ b/frontend/src/pages/styles/Home.module.css
@@ -1,5 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Raleway', sans-serif;
+}
+
 .containerCarousel{
-    margin: 0 18% 0 18%;
+    margin: 0 8% 0 8%;
 }
 
 @media only screen and (min-width: 577px) and (max-width: 768px) {
