--- a/frontend/src/pages/styles/Login.module.css
+++ b/frontend/src/pages/styles/Login.module.css
@@ -25,7 +25,8 @@
     border-radius: 20px 0 0 20px;
     background-color: #015a80;
     padding: 20px;
-    color: aliceblue;    display: flex;
+    color: aliceblue;    
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
